--- a/DELISH/contact.html
+++ b/DELISH/contact.html
@@ -71,53 +71,104 @@
 </section>
 <!-- Hero Section End -->
 
-<!-- contact Section Start -->
-
-<div class="contact-profile-section">
-  <div class="contact-profile-card">
-    <div class="contact-profile-left">
-      <h2>Richard John</h2>
-      <div class="contact-profile-title">Founder &amp; CEO</div>
-      <p class="contact-profile-desc">
-        Sam consequat mauris conubia inceptos nostra rutrum morbi sagittis pulvinar, commodo curabitur. Neceans fermentum magna tempus nisl ullamcorper, ante auctor magnis pretium eu lectus euismod platea. Congue sociosqu nostra est urna pellentesque placerat euismod bibendum.
-      </p>
-      <div class="contact-profile-info-grid">
-        <div class="contact-profile-info">
-          <span class="contact-profile-icon"><i class="fa-solid fa-user-clock"></i></span>
-          <div>
-            <div class="contact-profile-info-label">Experience</div>
-            <div class="contact-profile-info-value">More Than 10 Years</div>
-          </div>
-        </div>
-        <div class="contact-profile-info">
-          <span class="contact-profile-icon"><i class="fa-solid fa-envelope"></i></span>
-          <div>
-            <div class="contact-profile-info-label">Email</div>
-            <div class="contact-profile-info-value">info@agency.com</div>
-          </div>
-        </div>
-        <div class="contact-profile-info">
-          <span class="contact-profile-icon"><i class="fa-solid fa-phone"></i></span>
-          <div>
-            <div class="contact-profile-info-label">Phone</div>
-            <div class="contact-profile-info-value">+(256) 58621469581</div>
-          </div>
-        </div>
-        <div class="contact-profile-info">
-          <span class="contact-profile-icon"><i class="fa-solid fa-fax"></i></span>
-          <div>
-            <div class="contact-profile-info-label">Fax</div>
-            <div class="contact-profile-info-value">+2568145632</div>
-          </div>
-        </div>
+<!-- contact-info Section Start -->
+<div class="office-info-bg">
+  <div class="office-info-card">
+    <h3>OFFICE INFORMATION</h3>
+    <p class="office-info-desc">
+      Completely available 24/7. Connect via standard compliant means anytime.
+    </p>
+    <div class="office-info-item">
+      <span class="office-info-icon">
+        <!-- Phone SVG -->
+        <img src="assests/phone.png" alt="clock">
+      </span>
+      <div>
+        <div class="office-info-title">Phone Number &amp; Email</div>
+        <div class="office-info-detail">+0732 2387 23923</div>
+        <div class="office-info-detail">help@delishmail.com</div>
       </div>
-      <button class="contact-profile-btn">CONTACT ME</button>
     </div>
-    <div class="contact-profile-right">
-      <img src="assests/img122.png" alt="Chef" />
+    <div class="office-info-item">
+      <span class="office-info-icon">
+        <!-- Location SVG -->
+        <img src="assests/location.png" alt="clock">
+        </svg>
+      </span>
+      <div>
+        <div class="office-info-title">Our Office Address</div>
+        <div class="office-info-detail">202 Dalsingh Street, Allied Line, NY 01234, Berlin</div>
+      </div>
+    </div>
+    <div class="office-info-item">
+      <span class="office-info-icon">
+        <!-- Clock SVG -->
+        <img src="assests/clock.png" alt="clock">
+      </span>
+      <div>
+        <div class="office-info-title">Official Work Time</div>
+        <div class="office-info-detail">7.00am - 6.00pm (Mon - Fri)</div>
+        <div class="office-info-detail office-info-closed">Sat, Sun &amp; Holiday Closed</div>
+      </div>
     </div>
   </div>
 </div>
+<!-- contact-info Section End -->
+
+
+
+
+<!-- contact Section Start -->
+
+<section class="contact-section">
+  <div class="contact-container">
+    <h2>LEAVE A MESSAGE</h2>
+    <p class="contact-desc">
+      Leave [your] details & start conversation: adipiscing elit, sed do eiusmod tempor, exid, justo in faucibus aliquet fin. Consectetur tristique euismod euismod est non sed fermentum erat gravida.
+    </p>
+    <form class="contact-form">
+      <div class="form-row">
+        <div class="form-group">
+          <input type="text" placeholder="Your Name" required>
+          <span class="input-icon">
+            <!-- User SVG icon -->
+            <svg width="18" height="18" fill="none" stroke="#bbb" stroke-width="2" viewBox="0 0 18 18">
+              <circle cx="9" cy="6" r="3"/>
+              <path d="M3 15c0-3.3 2.7-6 6-6s6 2.7 6 6"/>
+            </svg>
+          </span>
+        </div>
+        <div class="form-group">
+          <input type="email" placeholder="Email Address" required>
+          <span class="input-icon">
+            <!-- Email SVG icon -->
+            <svg width="18" height="18" fill="none" stroke="#bbb" stroke-width="2" viewBox="0 0 18 18">
+              <rect x="2" y="4" width="14" height="10" rx="2"/>
+              <path d="M2 4l7 6 7-6"/>
+            </svg>
+          </span>
+        </div>
+      </div>
+      <div class="form-group">
+        <select required>
+          <option value="" disabled selected>Select Subject</option>
+          <option>General Inquiry</option>
+          
+        </select>
+        <span class="input-icon select-icon">
+          <!-- Down arrow SVG -->
+          <svg width="16" height="16" fill="none" stroke="#bbb" stroke-width="2" viewBox="0 0 16 16">
+            <path d="M4 6l4 4 4-4"/>
+          </svg>
+        </span>
+      </div>
+      <div class="form-group">
+        <textarea rows="4" placeholder="Type Your Message" required></textarea>
+      </div>
+      <button type="submit" class="contact-btn">SUBMIT MESSAGE &rarr;</button>
+    </form>
+  </div>
+</section>
 
 <!-- contact Section End -->
 
