--- a/DELISH/index.html
+++ b/DELISH/index.html
@@ -61,7 +61,387 @@
 </header>
 <!-- Header Section End -->
 <br>
+
+<!-- hero slider section start-->
+<div class="custom-hero">
+  <div class="custom-hero-bg"></div>
+  <div class="custom-hero-overlay"></div>
+  <div class="custom-hero-side custom-hero-side-left">
+    OPENING HOURS: 11:00 - 22:00
+  </div>
+  <div class="custom-hero-side custom-hero-side-right">
+    CONTACT: +123 456 7890
+  </div>
+  <div class="custom-hero-content">
+    <div class="custom-hero-small">THE GREAT</div>
+    <div class="custom-hero-main">FLAVORED FOOD</div>
+    <div class="custom-hero-sub">PART OF US</div>
+    <div class="custom-hero-buttons">
+      <a href="#" class="custom-hero-btn">BOOK A TABLE</a>
+      <a href="#" class="custom-hero-btn">VIEW MENU</a>
+    </div>
+    <div class="custom-hero-dots">
+      <span class="dot"></span>
+      <span class="dot"></span>
+      <span class="dot"></span>
+    </div>
+  </div>
+</div>
+
+<!-- hero slider section end  -->
+
+<!-- welcome section start -->
+<div class="welcome-section">
+  <img src="assests/let.jpg" alt="lettuce" class="welcome-lettuce">
+  
+  <div class="welcome-container">
+    <div class="welcome-left">
+      <div class="welcome-image-placeholder"></div>
+    </div>
+    <div class="welcome-right">
+      <button class="welcome-res-btn">MAKE RESERVATION</button>
+      <h2>WELCOME TO OUR<br>LUXURY RESTAURANT</h2>
+      <p class="welcome-desc">
+        The scallops were perfectly cooked, tender, and flavorful, paired beautifully with a creamy risotto and seasonal vegetables. This presentation was artful, showcasing the chef’s attention to detail.
+      </p>
+      <div class="welcome-hotline">
+        <span class="welcome-hotline-icon">
+          <!-- Phone SVG -->
+          <svg width="22" height="22" fill="none" stroke="#fff" stroke-width="2" viewBox="0 0 22 22">
+            <circle cx="11" cy="11" r="11" fill="#c0392b"/>
+            <path d="M8 9c0 2.5 2.5 5 5 5l1-1c.2-.2.5-.2.7 0l1.3 1.3c.2.2.2.5 0 .7l-1 1c-.3.3-.7.4-1.1.3-2.7-.5-6-3.8-6.5-6.5-.1-.4 0-.8.3-1.1l1-1c.2-.2.5-.2.7 0L9 8.3c.2.2.2.5 0 .7l-1 1z"/>
+          </svg>
+        </span>
+        <div>
+          <div class="welcome-hotline-label">HOTLINE 24/7</div>
+          <div class="welcome-hotline-number">+256 3254-2568</div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- welcome section end -->
+
+<!-- service section start  -->
+<section class="service-section">
+
+<div class="gallery-header">
+  <span class="gallery-label">OUR SERVICES</span>
+  <h2>OUR RESTAURANT SERVICES</h2>
+  <div class="gallery-underline"><i class="fa-solid fa-diamond"></i><i class="fa-solid fa-diamond"></i><i class="fa-solid fa-diamond"></i><i class="fa-solid fa-diamond"></i> </div>
+</div>
+
+<div class="service-section">
+  <img src="assests/mushroom.png" alt="mushroom" class="service-mushroom">
+  <div class="service-cards">
+    <div class="service-card">
+      <img src="assests/bg (1).png" alt="Wedding Service" class="service-img">
+      <div class="service-content">
+        <div class="service-title">WEDDING SERVICE</div>
+        <div class="service-desc">
+          The chocolate fondant which did not disappoint. It was rich and indulgent, with a gooey center that was pure bliss.
+        </div>
+        <a href="#" class="service-btn">
+          READ MORE
+          <span class="service-arrow">&rarr;</span>
+        </a>
+      </div>
+    </div>
+    <div class="service-card">
+      <img src="assests/bg (2).png" alt="Buffet Service" class="service-img">
+      <div class="service-content">
+        <div class="service-title">BUFFET SERVICE</div>
+        <div class="service-desc">
+          Assertively myocardinate robust e-tailers for extensible human capital. Objectively benchmark networks.
+        </div>
+        <a href="#" class="service-btn">
+          READ MORE
+          <span class="service-arrow">&rarr;</span>
+        </a>
+      </div>
+    </div>
+    <div class="service-card">
+      <img src="assests/bg (3).png" alt="Party Service" class="service-img">
+      <div class="service-content">
+        <div class="service-title">PARTY SERVICE</div>
+        <div class="service-desc">
+          Assertively myocardinate robust e-tailers for extensible human capital. Objectively benchmark networks.
+        </div>
+        <a href="#" class="service-btn">
+          READ MORE
+          <span class="service-arrow">&rarr;</span>
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+</section>
+
+<!-- service section end -->
+
+<!-- menu section start -->
+<div class="menu-main-section">
+  <div class="menu-left">
+    <span class="menu-badge">FOOD MENU</span>
+    <h2 class="menu-title">OUR DELICIOUS FOODS</h2>
+    <div class="menu-left-content">
+      <img src="assests/Rectangle 156.png" alt="Featured" class="menu-featured-img">
+      <ul class="menu-list">
+        <li>
+          <span class="menu-item-name">Braised Short Ribs</span>
+          <span class="menu-item-price">$15.00</span>
+          <div class="menu-item-desc">Non nisi sit amet est facilisis magna</div>
+        </li>
+        <li>
+          <span class="menu-item-name">Roasted Vegetable Platter</span>
+          <span class="menu-item-price">$15.00</span>
+          <div class="menu-item-desc">Non nisi sit amet est facilisis magna</div>
+        </li>
+        <li>
+          <span class="menu-item-name">Classic Caesar Salad</span>
+          <span class="menu-item-price">$15.00</span>
+          <div class="menu-item-desc">Non nisi sit amet est facilisis magna</div>
+        </li>
+        <li>
+          <span class="menu-item-name">Szechuan Beef Stir-fry</span>
+          <span class="menu-item-price">$15.00</span>
+          <div class="menu-item-desc">Non nisi sit amet est facilisis magna</div>
+        </li>
+        <li>
+          <span class="menu-item-name">Vegan Buddha Bowl</span>
+          <span class="menu-item-price">$15.00</span>
+          <div class="menu-item-desc">Non nisi sit amet est facilisis magna</div>
+        </li>
+        <li>
+          <span class="menu-item-name">Vegan Buddha Bowl</span>
+          <span class="menu-item-price">$15.00</span>
+          <div class="menu-item-desc">Non nisi sit amet est facilisis magna</div>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <div class="menu-right">
+    <div class="menu-filters">
+      <button class="menu-filter active">ALL FOOD</button>
+      <button class="menu-filter">BREAKFAST</button>
+      <button class="menu-filter">LUNCH</button>
+      <button class="menu-filter">DINNER</button>
+    </div>
+    <div class="menu-grid">
+      <div class="menu-card">
+        <img src="assests/fish.jpg" alt="Classic Caesar Salad">
+        <div class="menu-card-content">
+          <div class="menu-card-stars">
+            <span class="star">&#9733;</span><span class="star">&#9733;</span><span class="star">&#9733;</span><span class="star">&#9733;</span><span class="star">&#9733;</span>
+          </div>
+          <div class="menu-card-title">Classic Caesar Salad</div>
+          <div class="menu-card-price">$15.00</div>
+        </div>
+      </div>
+      <div class="menu-card">
+        <img src="assests/Rectangle 157.png" alt="Braised Short Ribs">
+        <div class="menu-card-content">
+          <div class="menu-card-stars">
+            <span class="star">&#9733;</span><span class="star">&#9733;</span><span class="star">&#9733;</span><span class="star">&#9733;</span><span class="star">&#9733;</span>
+          </div>
+          <div class="menu-card-title">Braised Short Ribs</div>
+          <div class="menu-card-price">$15.00</div>
+        </div>
+      </div>
+      <div class="menu-card">
+        <div class="menu-card-placeholder"></div>
+        <div class="menu-card-content">
+          <div class="menu-card-stars">
+            <span class="star">&#9733;</span><span class="star">&#9733;</span><span class="star">&#9733;</span><span class="star">&#9733;</span><span class="star">&#9733;</span>
+          </div>
+          <div class="menu-card-title">Chicken Masala</div>
+          <div class="menu-card-price">$15.00</div>
+        </div>
+      </div>
+      <div class="menu-card">
+        <img src="assests/wwq.jpg" alt="Chicken Alfredo Pasta">
+        <div class="menu-card-content">
+          <div class="menu-card-stars">
+            <span class="star">&#9733;</span><span class="star">&#9733;</span><span class="star">&#9733;</span><span class="star">&#9733;</span><span class="star">&#9733;</span>
+          </div>
+          <div class="menu-card-title">Chicken Alfredo Pasta</div>
+          <div class="menu-card-price">$15.00</div>
+        </div>
+      </div>
+      <div class="menu-card">
+        <img src="assests/Rectangle 157 (2).png" alt="Vegan Buddha Bowl">
+        <div class="menu-card-content">
+          <div class="menu-card-stars">
+            <span class="star">&#9733;</span><span class="star">&#9733;</span><span class="star">&#9733;</span><span class="star">&#9733;</span><span class="star">&#9733;</span>
+          </div>
+          <div class="menu-card-title">Vegan Buddha Bowl</div>
+          <div class="menu-card-price">$15.00</div>
+        </div>
+      </div>
+      <div class="menu-card">
+        <img src="assests/Rectangle 157 (3).png" alt="Chocolate Lava Cake">
+        <div class="menu-card-content">
+          <div class="menu-card-stars">
+            <span class="star">&#9733;</span><span class="star">&#9733;</span><span class="star">&#9733;</span><span class="star">&#9733;</span><span class="star">&#9733;</span>
+          </div>
+          <div class="menu-card-title">Chocolate Lava Cake</div>
+          <div class="menu-card-price">$15.00</div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- menu section end -->
+
+<!-- state gallery section start -->
+<div class="stats-gallery-section">
+  <div class="stats-row">
+    <div class="stat">
+      <div class="stat-number">15</div>
+      <div class="stat-label">
+        <div class="stat-label">TOTAL<br>AWARDS WIN</div>
+      </div>
+    </div>
+    <div class="stat">
+      <div class="stat-number">15 </div>
+      <div class="stat-label">TOTAL<br>AWARDS WIN</div>
+    </div>
+    <div class="stat">
+      <div class="stat-number">20</div>
+      <div class="stat-label">UNIQUE<br>FOOD SPECIALITIES</div>
+    </div>
+    <div class="stat">
+      <div class="stat-number">69</div>
+      <div class="stat-label">HARD<br>TEAM MEMBERS</div>
+    </div>
+  </div>
+  <div class="gallery-header1">
+    <div class="gallery-header1-left">
+      <button class="gallery-btn">VIEW OUR PROJECTS</button>
+      <h2 class="gallery-title">OUR FOOD GALLERY</h2>
+    </div>
+    <div class="gallery-arrows">
+      <button class="gallery-arrow" id="gallery-prev">&#8592;</button>
+      <button class="gallery-arrow" id="gallery-next">&#8594;</button>
+    </div>
+  </div>
+  <div class="gallery-slider-wrapper">
+    <div class="gallery-slider" id="gallery-slider">
+      <div class="gallery-slide"><img src="assests/gallery1.png" alt="Food 1"></div>
+      <div class="gallery-slide gallery-slide-center">
+        <span class="gallery-eye">&#128065;</span>
+      </div>
+      <div class="gallery-slide"><img src="assests/gallery1.png" alt="Food 2"></div>
+      <div class="gallery-slide"><img src="assests/s8.jpg" alt="Food 3"></div>
+      <div class="gallery-slide"><img src="assests/s9.jpg" alt="Food 4"></div>
+    </div>
+  </div>
+</div>
+
+
+<!-- state gallery section end-->
+
+
+
+
 <script src="js/main.js"></script>
+<script src="js/index.js"></script>
+<div class="space"></div>
+
+<!--customer feedback section start-->
+<div class="gallery-header">
+  <span class="gallery-label">CUSTOMER TESTIMONIAL</span>
+  <h2>OUR CUSTOMER FEEDBACKS</h2>
+  <div class="gallery-underline"><i class="fa-solid fa-diamond"></i><i class="fa-solid fa-diamond"></i><i class="fa-solid fa-diamond"></i><i class="fa-solid fa-diamond"></i> </div>
+</div>
+
+  <div class="testimonial-slider-outer">
+    <div class="testimonial-slider" id="testimonial-slider">
+      <div class="testimonial-card">
+        <div class="testimonial-text">
+          The only minor downside was the noise level, which made conversation a bit challenging at times. However, this did not significantly detract from the overall experience. The Culinary Corner excels in delivering delicious food and exceptional service.
+        </div>
+        <div class="testimonial-bottom">
+          <div class="testimonial-user">
+            <div class="testimonial-avatar"></div>
+            <div>
+              <div class="testimonial-name">Amanda Martin</div>
+              <div class="testimonial-role">Food Reviewer</div>
+            </div>
+          </div>
+          <div class="testimonial-quote">
+            <svg width="38" height="28" viewBox="0 0 38 28" fill="none">
+              <path d="M12 28H0L8 14V0H20V14L12 28ZM38 28H26L34 14V0H46V14L38 28Z" fill="#F5EAEA" />
+            </svg>
+          </div>
+        </div>
+      </div>
+      <div class="testimonial-card">
+        <div class="testimonial-text">
+          The only minor downside was the noise level, which made conversation a bit challenging at times. However, this did not significantly detract from the overall experience. The Culinary Corner excels in delivering delicious food and exceptional service.
+        </div>
+        <div class="testimonial-bottom">
+          <div class="testimonial-user">
+            <div class="testimonial-avatar"></div>
+            <div>
+              <div class="testimonial-name">Amanda Martin</div>
+              <div class="testimonial-role">Food Reviewer</div>
+            </div>
+          </div>
+          <div class="testimonial-quote">
+            <svg width="38" height="28" viewBox="0 0 38 28" fill="none">
+              <path d="M12 28H0L8 14V0H20V14L12 28ZM38 28H26L34 14V0H46V14L38 28Z" fill="#F5EAEA" />
+            </svg>
+          </div>
+        </div>
+      </div>
+      <!-- Add more testimonial-card divs as needed -->
+    </div>
+  </div>
+</div>
+
+
+<!--customer feedback section end-->
+
+
+<!--make reservation section start-->
+<div class="reservation-wrapper">
+  <div class="reservation-box">
+    <div class="reservation-form-side">
+      <div class="gallery-header">
+        <span class="gallery-label">BOOK A TABLE</span>
+        <h2>   MAKE RESERVATION</h2>
+        <div class="gallery-underline"><i class="fa-solid fa-diamond"></i><i class="fa-solid fa-diamond"></i><i class="fa-solid fa-diamond"></i><i class="fa-solid fa-diamond"></i> </div>
+      </div>
+      
+      <form class="reservation-form">
+        <select>
+          <option>1 Person</option>
+          <option>2 Persons</option>
+          <option>3 Persons</option>
+          <option>4 Persons</option>
+        </select>
+        <input type="date" />
+        <select>
+          <option>09:00 am</option>
+          <option>10:00 am</option>
+          <option>11:00 am</option>
+          <option>12:00 pm</option>
+        </select>
+        <button type="submit" class="reservation-btn">BOOK NOW</button>
+      </form>
+    </div>
+    <div class="reservation-image-side">
+      <img src="assests/resrervation1.jpg" alt="Reservation Dish" />
+    </div>
+  </div>
+</div>
+<!--make reservation section end-->
+
+
 
 <!-- before footer Section Start -->
 
