--- a/DELISH/shop.html
+++ b/DELISH/shop.html
@@ -73,7 +73,7 @@
 
 <!-- shop section start -->
 <section class="menu-section">
-  <div class="menu-grid">
+  <div class="menu-grid1">
     <!-- Card 1 -->
     <div class="menu-card">
       <img src="assests/shopdetail.jpg" alt="Beef Bourguignon">
