--- a/DELISH/team.html
+++ b/DELISH/team.html
@@ -65,8 +65,8 @@
 <section class="hero-chef" style="background: url('assests/ourchef.jpg') center center/cover no-repeat;">
   <div class="hero-overlay"></div>
   <div class="hero-content">
-    <h1>CHEF DETAILS</h1>
-    <p>HOME / CHEF DETAILS</p>
+    <h1>OUR CHEF</h1>
+    <p>HOME / OUR CHEF</p>
   </div>
 </section>
 <!-- Hero Section End -->
