fixed some design errors

--- a/DELISH/blog-details.html
+++ b/DELISH/blog-details.html
@@ -104,13 +104,13 @@
         <p>Quickly build market-driven future-ready content. Distinctively recapitalize customer-centric growth strategies via proactive customer service. Assertively enable strategic relationships and business partnerships at the inter-enterprise. Conveniently impact client-based results whereas collaborative markets.</p>
         <div class="blog-details-footer">
           <div class="blog-details-tags">
-            <span>Tags:</span>
+            <span><b>Tags:</b></span>
             <a href="#">Business Solution</a>,
             <a href="#">Growth</a>,
             <a href="#">Savish</a>
           </div>
           <div class="blog-details-social">
-            <span>Social Icon</span>
+            <span><b>Social Icon</b></span>
             <a href="#"><i class="fab fa-facebook-f"></i></a>
             <a href="#"><i class="fab fa-twitter"></i></a>
             <a href="#"><i class="fab fa-linkedin-in"></i></a>
@@ -122,8 +122,9 @@
             <span>Previous Post</span>
           </div>
           <div class="blog-details-nav-next">
-            <span>Next Post</span>
             <img src="assests/blog12.jpg" alt="Next Post">
+            <span>Next Post</span>
+          
           </div>
         </div>
       </div>
@@ -181,7 +182,7 @@
         <div class="comment-form-title">Leave a Reply</div>
         <form>
           <div class="comment-form-row">
-            <input type="text" placeholder="Your Name">
+            <input type="text" placeholder="Your Name" class="fa-regular fa-user">
             <input type="email" placeholder="Email Address">
           </div>
           <textarea placeholder="Type Your Message"></textarea>
