--- a/DELISH/blog.html
+++ b/DELISH/blog.html
@@ -81,7 +81,7 @@
         <span class="blog-category">FOODIES</span>
       </div>
       <div class="blog-post-meta">
-        <span class="blog-date"><i class="fa-regular fa-calendar"></i> 24 Feb, 2024</span>
+        <span class="blog-date12"><i class="fa-regular fa-calendar"></i> 24 Feb, 2024</span>
         <span class="blog-author"><i class="fa-regular fa-user"></i> by admin</span>
       </div>
       <h2 class="blog-post-title">ICONIC ESTABLISHMENTS ARE REINVENTING</h2>
@@ -95,7 +95,7 @@
         <span class="blog-category">FOODIES</span>
       </div>
       <div class="blog-post-meta">
-        <span class="blog-date"><i class="fa-regular fa-calendar"></i> 24 Feb, 2024</span>
+        <span class="blog-date12"><i class="fa-regular fa-calendar"></i> 24 Feb, 2024</span>
         <span class="blog-author"><i class="fa-regular fa-user"></i> by admin</span>
       </div>
       <h2 class="blog-post-title">EXPLORING THE WORLD OF FOOD AND WINE</h2>
@@ -109,7 +109,7 @@
         <span class="blog-category">FOODIES</span>
       </div>
       <div class="blog-post-meta">
-        <span class="blog-date"><i class="fa-regular fa-calendar"></i> 24 Feb, 2024</span>
+        <span class="blog-date12"><i class="fa-regular fa-calendar"></i> 24 Feb, 2024</span>
         <span class="blog-author"><i class="fa-regular fa-user"></i> by admin</span>
       </div>
       <h2 class="blog-post-title">WHAT IT TAKES TO ACHIEVE EXCELLENCE</h2>
@@ -123,7 +123,7 @@
         <span class="blog-category">FOODIES</span>
       </div>
       <div class="blog-post-meta">
-        <span class="blog-date"><i class="fa-regular fa-calendar"></i> 24 Feb, 2024</span>
+        <span class="blog-date12"><i class="fa-regular fa-calendar"></i> 24 Feb, 2024</span>
         <span class="blog-author"><i class="fa-regular fa-user"></i> by admin</span>
       </div>
       <h2 class="blog-post-title">AFFORDABLE GOURMET EXPERIENCES</h2>
@@ -217,13 +217,13 @@
     <div class="sidebar-section">
       <h3>POPULAR TAGS</h3>
       <div class="sidebar-tags">
-        <a href="#" class="active">Lunch</a>
-        <a href="#">Dinner</a>
-        <a href="#">Food</a>
-        <a href="#">Cooking</a>
-        <a href="#">Tips</a>
-        <a href="#">Juice</a>
-        <a href="#">Salads</a>
+        <a href="#" class="active">ADVICE</a>
+        <a href="#">AUTHOR</a>
+        <a href="#">CONSULTING</a>
+        <a href="#">DELISH</a>
+        <a href="#">FAMILY</a>
+        <a href="#">HELTH</a>
+        <a href="#">TIP</a>
         <a href="#">Solution</a>
       </div>
     </div>
