--- a/DELISH/index.html
+++ b/DELISH/index.html
@@ -373,7 +373,7 @@
             </div>
           </div>
           <div class="testimonial-quote">
-            <svg width="38" height="28" viewBox="0 0 38 28" fill="none">
+            <svg width="38" height="38" viewBox="0 0 38 28" fill="none">
               <path d="M12 28H0L8 14V0H20V14L12 28ZM38 28H26L34 14V0H46V14L38 28Z" fill="#F5EAEA" />
             </svg>
           </div>
@@ -417,14 +417,14 @@
         <div class="gallery-underline"><i class="fa-solid fa-diamond"></i><i class="fa-solid fa-diamond"></i><i class="fa-solid fa-diamond"></i><i class="fa-solid fa-diamond"></i> </div>
       </div>
       
-      <form class="reservation-form">
+      <form class="reservation-form1">
         <select>
           <option>1 Person</option>
           <option>2 Persons</option>
           <option>3 Persons</option>
           <option>4 Persons</option>
         </select>
-        <input type="date" />
+        <input type="date" /> 
         <select>
           <option>09:00 am</option>
           <option>10:00 am</option>
