--- a/DELISH/menu.html
+++ b/DELISH/menu.html
@@ -222,18 +222,24 @@
       </div>
     </div>
     <div class="blog-card-content">
-      <div class="blog-meta">
+      <div class="blog-meta custom-blog-meta">
+        <span class="blog-avatar"></span>
         <span class="blog-author">MARKUS DANIEL</span>
-        <span class="blog-comments"><i class="fa fa-comment"></i> 2 COMMENT</span>
+        <span class="blog-comments">
+          <i class="fa fa-comment"></i> 2 COMMENT
+        </span>
       </div>
       <h3 class="blog-title">HOW RESTAURANTS FOSTER CONNECTIONS AND CREATE MEMORIES</h3>
       <a href="#" class="blog-readmore">READ MORE <span>&rarr;</span></a>
     </div>
     <!-- Bottom Row -->
     <div class="blog-card-content">
-      <div class="blog-meta">
+      <div class="blog-meta custom-blog-meta">
+        <span class="blog-avatar"></span>
         <span class="blog-author">MARKUS DANIEL</span>
-        <span class="blog-comments"><i class="fa fa-comment"></i> 2 COMMENT</span>
+        <span class="blog-comments">
+          <i class="fa fa-comment"></i> 2 COMMENT
+        </span>
       </div>
       <h3 class="blog-title">DISCOVERING AFFORDABLE GOURMET EXPERIENCES IN YOUR CITY</h3>
       <a href="#" class="blog-readmore">READ MORE <span>&rarr;</span></a>
