--- a/DELISH/shop-detail.html
+++ b/DELISH/shop-detail.html
@@ -93,16 +93,18 @@
       </div>
       <form class="product-cart-form">
         <div class="quantity-wrapper">
-          <button type="button" class="qty-btn">-</button>
-          <input type="number" value="1" min="1">
-          <button type="button" class="qty-btn">+</button>
+          <input type="number" value="1" min="1">1
+          <div class="qty-btns">
+            <button type="button" class="qty-btn up">▲</button>
+            <button type="button" class="qty-btn down">▼</button>
+          </div>
         </div>
         <button type="submit" class="add-to-cart-btn">ADD TO CART</button>
       </form>
       <div class="product-meta">
-        <div><b>SKU:</b> 17</div>
-        <div><b>Categories:</b> Light Bulb, Table</div>
-        <div><b>Tags:</b> Furniture, Textured</div>
+        <div>SKU: 17</div>
+        <div>Categories: Light Bulb, Table</div>
+        <div>Tags: Furniture, Textured</div>
       </div>
     </div>
   </div>
