--- a/DELISH/shop.html
+++ b/DELISH/shop.html
@@ -75,7 +75,7 @@
 <section class="menu-section">
   <div class="menu-grid1">
     <!-- Card 1 -->
-    <div class="menu-card">
+    <div class="menu-card1">
       <img src="assests/shopdetail.jpg" alt="Beef Bourguignon">
       <div class="menu-info">
         <div class="stars">★★★★★</div>
